--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@types/react-dom": "^18.0.6",
     "apexcharts": "^3.35.2",
     "axios": "^1.5.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "framer-motion": "^4.1.17",
     "next": "^12.2.5",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^2.7.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-calendar": "^3.7.0",
