--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^25.2.3",
     "@types/react-dom": "^18.0.6",
-    "apexcharts": "^3.35.2",
+    "apexcharts": "^3.42.0",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "framer-motion": "^4.1.17",
     "next": "^12.2.5",
     "node-fetch": "^2.7.0",
+    "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-calendar": "^3.7.0",
+    "react-canvas-confetti": "^1.4.0",
+    "react-chartjs-2": "^5.2.0",
     "react-custom-scrollbars-2": "^4.2.1",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
