--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,5 @@
   "exclude": ["node_modules"],
   "include": [
     "./src",
-    "next-env.d.ts", "**/*.ts", "**/*.tsx", "next.config.js", "api.js"],
+    "next-env.d.ts", "**/*.ts", "**/*.tsx", "next.config.js", "api.js", "custom.d.ts"],
 }
