--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^12.2.5",
     "node-fetch": "^2.7.0",
     "numeral": "^2.0.6",
+    "powerbi-client": "^2.22.3",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-calendar": "^3.7.0",
