--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "2.0.2",
     "typescript": "^4.7.4",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "xml2js": "^0.6.2"
   },
   "scripts": {
     "dev": "next dev",
@@ -67,6 +68,7 @@
     "@types/react": "^18.0.17",
     "@types/react-calendar": "^3.5.2",
     "@types/react-table": "^7.7.12",
+    "@types/xml2js": "^0.4.14",
     "eslint": "^8.23.0",
     "eslint-config-next": "^12.2.5",
     "gh-pages": "^3.2.3"
